# Version 0.44

## New Features

- rename downloaded to downloadState and improve initialization -- kaneryu on 2025-10-04



# Version 0.43

## New Features

- standardize MediaPlayer with NAME constant and songChanged(int) signal -- kaneryu on 2025-10-04



# Version 0.42

## New Features

- add configurable starting interval for dynamic interval tasks -- kaneryu on 2025-10-04



# Version 0.41

## New Features

- Add occasional task management to BackgroundWorker for dynamic interval tasks, Added occasional offlinecheck and occasional discord recconect attempts (closes: 13) -- kaneryu on 2025-09-21

## Bugfixes

- made it so the albumtype is displayed in UI -- kaneryu on 2025-09-21
- don't spam online checks when we're offline -- kaneryu on 2025-09-23
- improvements to notifying logs -- kaneryu on 2025-09-23
- ensure multiple instances of interval tasks can't be started at the same time -- kaneryu on 2025-09-23



# Version 0.40

## New Features

- Implement multiple media player backends -- kaneryu on 2025-09-21

## Bugfixes

- Update _set_info validation to include EP type -- kaneryu on 2025-09-21



# Version 0.39

## New Features

- Add support for multiple media player backends; Implement FFPlay Backend -- kaneryu on 2025-09-16

## Bugfixes

- Allow album type to include singles in _set_info validation -- kaneryu on 2025-09-16



# Version 0.38

## New Features

- Add Albums. Currently available in search. -- kaneryu on 2025-09-16



# Version 0.37

## New Features

- implement debounce logic for Next and Prev song controls -- kaneryu on 2025-09-07

## Bugfixes

- fix bug where notifying log model wouldn't add logs based on error level, and disable song fetching if we're offline -- kaneryu on 2025-09-08
- bug where incorrect offline check led to infinite recursion -- kaneryu on 2025-09-09
- decrease offline mode timeout check for faster offline startup -- kaneryu on 2025-09-09
- make various bugfixes so the app now compiles again -- kaneryu on 2025-09-13