@@ -3,3 +3,7 @@
 ## New Features
 
 - rename downloaded to downloadState and improve initialization -- kaneryu on 2025-10-04
+
+## Bugfixes
+
+- add Qt signals and proper change notifications to AppUrl -- kaneryu on 2025-10-04
